--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "backend"]
 	path = backend
 	url = https://github.com/ICH-Inner-Project/Backend
+[submodule "frontend"]
+	path = frontend
+	url = https://github.com/ICH-Inner-Project/Frontend
